# search_engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  RelativeIndex.h  SearchServer.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  expectedAnswers.json  testAnswers.json  testConfig.json  testRequests.json  testSearchEngine.cpp
